--- a/templates/admin/pages/edit/edit_page.html
+++ b/templates/admin/pages/edit/edit_page.html
@@ -23,6 +23,7 @@
 
     <div id="content">
         <form method="post" action="">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
             {% for message in messages %}
             <div id="message">
                 <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
