--- a/templates/setup/setup.html
+++ b/templates/setup/setup.html
@@ -12,6 +12,7 @@
 <body>
 <div id="main">
     <form method="post" action="">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
         <h3>Configure Database</h3>
         {% for msg in message %}
         <div id="message">
