--- a/templates/admin/pages/view/show_pages.html
+++ b/templates/admin/pages/view/show_pages.html
@@ -90,11 +90,16 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4H6a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2v-5M16.414 3.586a2 2 0 112.828 2.828L10 15H6v-4l10.414-10.414z" />
                 </svg>
             </button>
-            <button onclick="location.href = '/admin/pages/delete?id={{ page[0] }}'" class="delete-button">
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 13h6m2 10H7a2 2 0 01-2-2V7h14v14a2 2 0 01-2 2zM10 7V4a2 2 0 012-2h0a2 2 0 012 2v3" />
-                </svg>
-            </button>
+            <form method="post" action="/admin/pages/delete" style="display:inline;">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+                <input type="hidden" name="page_id" value="{{ page[0] }}">
+                <button type="submit" class="delete-button">
+                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                              d="M9 13h6m2 10H7a2 2 0 01-2-2V7h14v14a2 2 0 01-2 2zM10 7V4a2 2 0 012-2h0a2 2 0 012 2v3"/>
+                    </svg>
+                </button>
+            </form>
         </td>
     </tr>
     {% endfor %}
