--- a/templates/admin/posts/view/show_posts.html
+++ b/templates/admin/posts/view/show_posts.html
@@ -96,14 +96,17 @@
                     </button>
 
                     {% if permissions == PermissionsEnum.ADMINISTRATOR %}
-                    <button onclick="location.href = '/admin/posts/delete?id={{ post[6] }}'"
-                            class="delete-button">
-                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                             stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  d="M9 13h6m2 10H7a2 2 0 01-2-2V7h14v14a2 2 0 01-2 2zM10 7V4a2 2 0 012-2h0a2 2 0 012 2v3"/>
-                        </svg>
-                    </button>
+                    <form method="post" action="/admin/posts/delete" style="display:inline;">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+                        <input type="hidden" name="post_id" value="{{ post[6] }}">
+                        <button type="submit" class="delete-button">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                 stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                      d="M9 13h6m2 10H7a2 2 0 01-2-2V7h14v14a2 2 0 01-2 2zM10 7V4a2 2 0 012-2h0a2 2 0 012 2v3"/>
+                            </svg>
+                        </button>
+                    </form>
                     {% endif %}
                 </td>
             </tr>
